fix: enhance focus visibility for product review carousel cards

--- a/foundation_cms/static/scss/blocks/themes/default/product_review_carousel_block.scss
+++ b/foundation_cms/static/scss/blocks/themes/default/product_review_carousel_block.scss
@@ -135,11 +135,8 @@
           }
         }
 
-        &:hover,
-        &:focus-within {
+        &:hover {
           transform: scale($scale);
-          outline: 2px solid $highlight-color;
-          outline-offset: 2px;
 
           .product-review-card__title {
             color: $highlight-color;
@@ -149,6 +146,11 @@
               transform-origin: left;
             }
           }
+        }
+
+        &:focus-within {
+          outline: 2px solid $highlight-color;
+          outline-offset: 2px;
         }
       }
     }
